version/0.20/_sources/api/solver/_autosummary/settings/density.rst.txt
:orphan:

.. _density:

density
=======

.. autoclass:: ansys.fluent.core.solver.settings_241.density.density
    :show-inheritance:

.. rubric:: Attributes

====================================================   ============================================================

Attribute                                                                                                   Summary

====================================================   ============================================================
:ref:`option <option_7>`                                           Select method for calculating material property.

:ref:`real_gas_nist <real_gas_nist>`                                                         'real_gas_nist' child.

:ref:`value <value_3>`                                                         Specify the constant property value.

:ref:`compressible_liquid <compressible_liquid>`                                       'compressible_liquid' child.

:ref:`piecewise_linear <piecewise_linear_1>`               Specify ranges and values for piecewise-linear property.

:ref:`piecewise_polynomial <piecewise_polynomial>`                           Specify piecewise-polynomial settings.

:ref:`polynomial <polynomial_1>`                                                   Specify polynomial coefficients.

:ref:`expression <expression>`                                         Specify the property value as an expression.

:ref:`user_defined_function <user_defined_function>`                                 'user_defined_function' child.

:ref:`rgp_table <rgp_table>`                                                             Select RGP Table Data Set.

====================================================   ============================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

