version/0.25/_sources/api/solver/_autosummary/settings/density.rst.txt
:orphan:

.. _density:

density
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.density.density
    :show-inheritance:

.. rubric:: Attributes

====================================================   ============================================================

Attribute                                                                                                   Summary

====================================================   ============================================================
:ref:`option <option_12>`                                          Select method for calculating material property.

:ref:`real_gas_nist <real_gas_nist>`                                                        Real gas NIST settings.

:ref:`value <value_11>`                                                        Specify the constant property value.

:ref:`compressible_liquid <compressible_liquid>`                                      Compressible liquid settings.

:ref:`piecewise_linear <piecewise_linear_2>`               Specify ranges and values for piecewise-linear property.

:ref:`piecewise_polynomial <piecewise_polynomial>`                                   Piecewise polynomial settings.

:ref:`polynomial <polynomial_2>`                                                               Polynomial settings.

:ref:`expression <expression>`                                         Specify the property value as an expression.

:ref:`user_defined_function <user_defined_function>`                                 Specify user defined function.

:ref:`rgp_table <rgp_table>`                                                             Select RGP Table Data Set.

====================================================   ============================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

